--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "serve:todolist": "cd todolist && stack-monitor ./stack.js",
     "check:monorepo": "cd common/check-monorepo && npm run start",
     "ci:generate": "node ./common/workflows/src/index.js",
-    "lint": "node runScriptWithEnv \"turbo run lint\"",
-    "test": "node runScriptWithEnv \"turbo run test\"",
-    "build": "node runScriptWithEnv \"turbo run build\""
+    "lint": "node runScriptWithEnvs \"turbo run lint\"",
+    "test": "node runScriptWithEnvs \"turbo run test\"",
+    "build": "node runScriptWithEnvs \"turbo run build\""
   },
   "author": "",
   "license": "ISC",
