fix: add workflows

--- a/turbo.json
+++ b/turbo.json
@@ -18,10 +18,14 @@
       ],
       "outputs": []
     },
+    "lint": {
+      "outputs": []
+    },
     "deploy": {
       "dependsOn": [
         "build",
-        "test"
+        "test",
+        "lint"
       ],
       "outputs": []
     }
