--- a/common/workflows/package.json
+++ b/common/workflows/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vanessa-lanquetin/common-workflows",
-  "version": "1.0.1-beta.0",
+  "version": "1.0.1",
   "description": "",
   "repository": "https://github.com/vanessa-lanquetin/todo-list",
   "main": "src/index.js",
