fix: add workflows

--- a/.github/workflows/todolist-front-mobile.yml
+++ b/.github/workflows/todolist-front-mobile.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Use coturiv/setup-ionic
         uses: coturiv/setup-ionic@v1
         with:
-          cordova-version: 8
+          java-version: 17
 
       - name: "Checkout"
         uses: actions/checkout@v2
