--- a/.github/workflows/todolist-front-mobile.yml
+++ b/.github/workflows/todolist-front-mobile.yml
@@ -7,11 +7,9 @@ name: "Create mobile app todolist-front"
 
 # Only trigger, when the build workflow succeeded
 on:
-  workflow_dispatch:
-    inputs:
-      package_version:
-        description: 'Version to build'     
-        required: true
+  push:
+    branches:    
+      - '*' 
 
 jobs:
   update:
