--- a/todolist/server/package.json
+++ b/todolist/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vanessa-lanquetin/todolist-server",
-  "version": "1.0.4",
+  "version": "1.0.5-beta.0",
   "description": "",
   "main": "index.js",
   "bin": "bin/www",
