--- a/common/check-monorepo/package.json
+++ b/common/check-monorepo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vanessa-lanquetin/common-check-monorepo",
-  "version": "1.0.5-beta.0",
+  "version": "1.0.5",
   "description": "",
   "repository": "https://github.com/vanessa-lanquetin/monorepo",
   "main": "src/index.js",
