--- a/.github/workflow-template-mobile.yml
+++ b/.github/workflow-template-mobile.yml
@@ -17,16 +17,17 @@ jobs:
     steps:
       - name: Receive event
         run: echo -e "ref:${{ github.ref }}\nversion:${{ inputs.package_version }}\n"
-        
-      - name: Use coturiv/setup-ionic
-        uses: coturiv/setup-ionic@v1
-        with:
-          cordova-version: 8
 
       - name: "Checkout"
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: Setup java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '17'
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
@@ -50,10 +51,6 @@ jobs:
 
       - name: Build
         run: npm run build -- --filter={{NAME_ROUTE}}
-
-      - name: Sync capacitor
-        run: |
-          cd {{LOCATION}} && pwd && ls -k
 
       - name: Sync capacitor
         run: cd {{LOCATION}} &&  node_modules/.bin/cap sync
