--- a/meteo/package.json
+++ b/meteo/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview",
     "format": "prettier --write src/",
     "test": "echo \"Error: no test specified\" && exit 0",
-    "postpublish": "EVENT_TYPE=meteo REPO=vanessa-lanquetin/monorepo node ../../common/trigger-workflow/src/index.js"
+    "postpublish": "EVENT_TYPE=meteo REPO=vanessa-lanquetin/monorepo node ../common/trigger-workflow/src/index.js"
   },
   "repository": {
     "type": "git",
