ci: change to clabroche registry

--- a/.github/workflow-template-deploy.yml
+++ b/.github/workflow-template-deploy.yml
@@ -1,11 +1,11 @@
 name: Release
 
+
 on:
-  pull_request:
-    types: [closed]
-    branches:
-      - develop
+  push:
+    branches: 
       - master
+      - develop
 
 jobs:
   publish:
