--- a/.github/workflows/all-deploy.yml
+++ b/.github/workflows/all-deploy.yml
@@ -5,57 +5,95 @@
 
 name: Release
 
-
 on:
   push:
     branches: 
       - master
       - develop
+      - staging
 
 jobs:
-  publish:
-    if: github.event.pull_request.merged == true
+  runner:
     runs-on: ubuntu-latest
+    outputs:
+      runner: ${{ steps.set-runner.outputs.runner }}
+    steps:
+      - name: Set runner
+        id: set-runner
+        run: |
+          runners=$(curl -s -H "Accept: application/vnd.github+json" -H "Authorization: token ${{ secrets.DOCKER_RUNNER_TOKEN }}" "https://api.github.com/repos/${{ github.repository }}/actions/runners")
+          available=$(echo "$runners" | jq '.runners[] | select(.status == "online" and .busy == false and .labels[] .name == "self-hosted")')
+          echo $runners
+          echo $available
+          if [ -n "$available" ]; then
+            echo "runner=self-hosted" >> $GITHUB_OUTPUT
+            echo self-hosted
+          else
+            echo "runner=ubuntu-latest" >> $GITHUB_OUTPUT
+            echo ubuntu-latest
+          fi
+  publish:
+    needs: runner
+    runs-on: ${{ needs.runner.outputs.runner }}
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+      TURBO_TEAM: ${{ vars.TURBO_TEAM }}
 
+    outputs:
+      changed: ${{ steps.changes.outputs.changed }}
+      versionType: ${{ steps.version.outputs.type }}
+      lerna: ${{ steps.lerna.outputs.lernaJson }}
     steps:
-    - name: "Checkout"
+    - name: "Checkout ${{ github.ref_name }}"
       uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3
-      with:
-        node-version: 16
-        registry-url: 'https://npm.pkg.github.com/'
-        cache: 'yarn'
+    # - name: Setup Node.js environment
+    #   uses: actions/setup-node@v4
+    #   with:
+    #     node-version: 20
+    #     registry-url: 'https://npm.pkg.github.com/'
+    #     cache: 'yarn'
 
-    - name: Ensure access
-      run: npm whoami --registry https://npm.pkg.github.com/
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    # - name: Ensure access
+    #   run: npm whoami --registry https://npm.pkg.github.com/
+    #   env:
+    #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
     - name: Config git user
       run: |
         git config --global user.name "${{ github.actor }}"
         git config --global user.email "${{ github.actor }}@users.noreply.github.com"
 
-    - name: Install dependencies
-      run: yarn install --immutable
+    # - name: Install dependencies
+    #   run: yarn install --immutable
 
-    - name: Lint
-      run: yarn run lint
+    # - name: Lint
+    #   run: yarn run lint
 
-    - name: Tests
-      run: yarn run test
+    # - name: Tests
+    #   run: yarn run test
 
-    - name: Build
-      run: yarn run build
+    # - name: Build
+    #   run: yarn run build
 
-    - name: "Version and publish"
+    - id: changes
+      name: "Export list of package has changed"
+      run: |
+        if [ ${GITHUB_REF##*/} = develop ]; then
+          echo -n changed=$(yarn dlx -q turbo test --filter="...[v.dev]" --dry-run=json | jq -c '.packages') >> $GITHUB_OUTPUT
+        elif [ ${GITHUB_REF##*/} = staging ]; then
+          echo -n changed=$(yarn dlx -q turbo test --filter="...[v.staging]" --dry-run=json | jq -c '.packages') >> $GITHUB_OUTPUT
+        else
+          echo -n changed=$(yarn dlx -q turbo test --filter="...[v.latest]" --dry-run=json | jq -c '.packages') >> $GITHUB_OUTPUT
+        fi
+
+    - name: "Print changes"
+      run: echo "${{steps.changes.outputs.changed}}"
+
+    - name: "Version and publish ${{github.ref_name}}"
+      id: version
       env:
         GH_TOKEN: ${{ secrets.NPM_TOKEN }}
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -64,16 +102,22 @@ jobs:
         git config user.email "${{ github.actor}}@users.noreply.github.com"
 
         if [ ${GITHUB_REF##*/} = develop ]; then
-          npx lerna version --conventional-commits --conventional-prerelease --preid beta --yes
-          npx lerna publish from-package --yes --dist-tag prerelease --registry https://npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }} --force-publish
+          git tag -fa v.dev -m "fix: set v.dev tag"
+          git push -f --tags
+          echo "type=dev" >> $GITHUB_OUTPUT
+        elif [ ${GITHUB_REF##*/} = staging ]; then
+          git tag -fa v.staging -m "fix: set v.staging tag"
+          git push -f --tags
+          echo "type=staging" >> $GITHUB_OUTPUT
         else
           npx lerna version --conventional-commits --conventional-graduate --yes
-          npx lerna publish from-package --yes --registry https://npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }} --force-publish
+          npx lerna publish from-git --yes --registry https://npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }} --force-publish
+          git tag -fa v.latest -m "fix: set v.latest tag"
+          git push -f --tags
+          echo "type=latest" >> $GITHUB_OUTPUT
         fi
-    - uses: everlytic/branch-merge@1.1.2
-      if:   github.ref == 'master'
-      with:
-        github_token: ${{ secrets.NPM_TOKEN }}
-        source_ref: '${{ github.ref }}'
-        target_branch: 'develop'
-        commit_message_template: '[Automated] Merged {source_ref} into target {target_branch}'
+
+    - id: lerna
+      name: Export lerna config
+      run: |
+        echo lernaJson=$(cat lerna.json) >> $GITHUB_OUTPUT
