--- a/.github/workflows/todolist-front-mobile.yml
+++ b/.github/workflows/todolist-front-mobile.yml
@@ -3,47 +3,41 @@
 # If you must edit this file, edit files in .github/workflow-*.yml
 # Then launch "yarn ci:generate"
 
-name: "Create mobile app todolist-front"
-
-# Only trigger, when the build workflow succeeded
-on:
-  workflow_dispatch:
-    inputs:
-      package_version:
-        description: 'Version to build'     
-        required: true
-
-jobs:
-  update:
+  mobile-{{NAME_ROUTE_SANITIZED}}:
+    needs: [publish]
+    if: contains(needs.publish.outputs.changed, 'todolist-front')
     runs-on: ubuntu-latest
     env:
       TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
-      TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+      TURBO_TEAM: ${{ vars.TURBO_TEAM }}
     steps:
-      - name: Receive event
-        run: echo -e "ref:${{ github.ref }}\nversion:${{ inputs.package_version }}\n"
-        
-      - name: Use coturiv/setup-ionic
-        uses: coturiv/setup-ionic@v1
+      - name: Setup java
+        uses: actions/setup-java@v3
         with:
-          cordova-version: 8
+          distribution: 'zulu'
+          java-version: '17'
 
       - name: "Checkout"
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
+      - id: package-json
+        name: Read package.json
+        run: |
+          echo packageJSON=$(cat todolist/front/package.json) >> $GITHUB_OUTPUT
+
       - name: Setup Node.js environment
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: 20
           registry-url: 'https://npm.pkg.github.com/'
           cache: 'yarn'
 
       - name: insert credentials
         run: | 
           echo -e "\n//npm.pkg.github.com/:_authToken=${{ secrets.NPM_TOKEN }}" >> .npmrc
-          echo -e "\n@vanessa-lanquetin:registry=https://npm.pkg.github.com" >> .npmrc
+          echo -e "\n@clabroche:registry=https://npm.pkg.github.com" >> .npmrc
 
       - name: Ensure access
         run: npm whoami --registry https://npm.pkg.github.com/
@@ -51,30 +45,55 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Install dependencies
-        run: yarn install --immutable
+        run: yarn workspaces focus @vanessa-lanquetin/todolist-front @vanessa-lanquetin/monorepo
 
       - name: Build
-        run: npm run build -- --filter=todolist-front
+        run: npm run build -- --filter=@vanessa-lanquetin/todolist-front
 
       - name: Sync capacitor
+        working-directory: todolist/front
+        run: yarn cap sync
+
+      - name: Extract Android signing key from env
+        working-directory: todolist/front
         run: |
-          cd todolist/front && pwd && ls -k
+          echo "${{ secrets.KEY_STORE_FILE }}" > android/release.jks.base64
+          base64 -d android/release.jks.base64 > android/release.decrypted.jks
 
-      - name: Sync capacitor
-        run: cd todolist/front &&  node_modules/.bin/cap sync
-
-      - name: Build apk
-        run: cd todolist/front/android && ./gradlew assembleRelease
-
-      - name: Android apksigner
-        uses: r0adkll/sign-android-release@v1
+      - name: Temp fix stripe
+        run: |
+          ([ -f node_modules/@capacitor-community/stripe-terminal/android/src/main/java/com/getcapacitor/community/stripe/terminal/StripeTerminalPlugin.java ] && cp ./sophiemairy.fr/front/fix-stripe/StripeTerminalPlugin.java node_modules/@capacitor-community/stripe-terminal/android/src/main/java/com/getcapacitor/community/stripe/terminal/StripeTerminalPlugin.java) || echo "no action"
+      - name: Build APK
+        working-directory: todolist/front
+        run: |
+          cd android
+          sh ./gradlew assembleRelease
+      - name: Setup build tool version variable
+        shell: bash
+        run: |
+          BUILD_TOOL_VERSION=$(ls /usr/local/lib/android/sdk/build-tools/ | tail -n 1)
+          echo "BUILD_TOOL_VERSION=$BUILD_TOOL_VERSION" >> $GITHUB_ENV
+          echo Last build tool version is: $BUILD_TOOL_VERSION
+      - uses: r0adkll/sign-android-release@v1
+        name: Sign app APK
+        id: sign_app
         with:
           releaseDirectory: todolist/front/android/app/build/outputs/apk/release
           signingKeyBase64: ${{ secrets.KEY_STORE_FILE }}
           alias: ${{ secrets.KEY_STORE_ALIAS }}
           keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
           keyPassword: ${{ secrets.KEY_PASSWORD }}
+        env:
+          BUILD_TOOLS_VERSION: ${{ env.BUILD_TOOL_VERSION }}
 
-      - name: Upload APK
+      - name: 'Upload APK stable ${{fromJson(steps.package-json.outputs.packageJson).version}}'
+        if: contains(github.ref_name, 'master')
         run: |
-          curl -X POST -H "authorization: ${{ secrets.JWT_PRIVATE_KEY }}" -F file=@todolist/front/android/app/build/outputs/apk/release/app-release-unsigned-signed.apk -F version=${{ inputs.package_version }} https://appstore-core.vanessalanquetin.fr/api/apps/648d19e43914ca64208043c7/upload --fail
+          curl -X POST -H "authorization: ${{ secrets.JWT_PRIVATE_KEY }}" -F file=@${{steps.sign_app.outputs.signedReleaseFile}} -F version=${{fromJson(steps.package-json.outputs.packageJson).version}} https://appstore-core.corentinlabroche.fr/api/apps/648d19e43914ca64208043c7/upload --fail
+
+
+      - name: 'Upload APK prerelease ${{fromJson(steps.package-json.outputs.packageJson).version}}'
+        if: contains(github.ref_name, 'develop') || contains(github.ref_name, 'staging')
+        run: |
+          curl -X POST -H "authorization: ${{ secrets.JWT_PRIVATE_KEY }}" -F file=@${{steps.sign_app.outputs.signedReleaseFile}} -F version=${{fromJson(steps.package-json.outputs.packageJson).version}}-${{github.ref_name}} https://appstore-core.corentinlabroche.fr/api/apps/648d19e43914ca64208043c7/upload --fail
+
