--- a/.github/workflow-template-mobile.yml
+++ b/.github/workflow-template-mobile.yml
@@ -12,9 +12,6 @@
           distribution: 'zulu'
           java-version: '17'
 
-      - name: Receive event
-        run: echo -e "ref:${{ github.ref }}\nversion:${{ inputs.package_version }}\n"
-
       - name: "Checkout"
         uses: actions/checkout@v3
         with:
@@ -24,7 +21,6 @@
         name: Read package.json
         run: |
           echo packageJSON=$(cat {{LOCATION}}/package.json) >> $GITHUB_OUTPUT
-
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
@@ -44,13 +40,12 @@
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Install dependencies
-        run: yarn workspaces focus @vanessa-lanquetin/{{NAME_ROUTE}} @vanessa-lanquetin/monorepo
+        run: yarn workspaces focus @clabroche/{{NAME_ROUTE}} @clabroche/monorepo
 
       - name: Build
-        run: npm run build -- --filter=@vanessa-lanquetin/{{NAME_ROUTE}}
+        run: npm run build -- --filter=@clabroche/{{NAME_ROUTE}}
 
       - name: Sync capacitor
-<<<<<<< HEAD
         working-directory: {{LOCATION}}
         run: yarn cap sync
 
@@ -77,15 +72,6 @@
       - uses: r0adkll/sign-android-release@v1
         name: Sign app APK
         id: sign_app
-=======
-        run: cd {{LOCATION}} &&  node_modules/.bin/cap sync
-
-      - name: Build apk
-        run: cd {{LOCATION}}/android && ./gradlew assembleRelease
-
-      - name: Android apksigner
-        uses: r0adkll/sign-android-release@v1
->>>>>>> develop
         with:
           releaseDirectory: {{LOCATION}}/android/app/build/outputs/apk/release
           signingKeyBase64: ${{ secrets.KEY_STORE_FILE }}
