--- a/.github/workflows/all-deploy.yml
+++ b/.github/workflows/all-deploy.yml
@@ -328,9 +328,6 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
-      - name: Receive event
-        run: echo -e "ref:${{ github.ref }}\nversion:${{ inputs.package_version }}\n"
-
       - name: "Checkout"
         uses: actions/checkout@v3
         with:
@@ -340,7 +337,6 @@ jobs:
         name: Read package.json
         run: |
           echo packageJSON=$(cat todolist/front/package.json) >> $GITHUB_OUTPUT
-
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
@@ -360,13 +356,12 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Install dependencies
-        run: yarn workspaces focus @vanessa-lanquetin/todolist-front @vanessa-lanquetin/monorepo
+        run: yarn workspaces focus @clabroche/todolist-front @clabroche/monorepo
 
       - name: Build
-        run: npm run build -- --filter=@vanessa-lanquetin/todolist-front
+        run: npm run build -- --filter=@clabroche/todolist-front
 
       - name: Sync capacitor
-<<<<<<< HEAD
         working-directory: todolist/front
         run: yarn cap sync
 
@@ -393,15 +388,6 @@ jobs:
       - uses: r0adkll/sign-android-release@v1
         name: Sign app APK
         id: sign_app
-=======
-        run: cd todolist/front &&  node_modules/.bin/cap sync
-
-      - name: Build apk
-        run: cd todolist/front/android && ./gradlew assembleRelease
-
-      - name: Android apksigner
-        uses: r0adkll/sign-android-release@v1
->>>>>>> develop
         with:
           releaseDirectory: todolist/front/android/app/build/outputs/apk/release
           signingKeyBase64: ${{ secrets.KEY_STORE_FILE }}
