--- a/.github/workflow-template-docker.yml
+++ b/.github/workflow-template-docker.yml
@@ -27,7 +27,7 @@
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ vars.DOCKER_HUB_USER }}
+          username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.NPM_TOKEN }}
 
       - id: package-json
