--- a/.github/workflows/all-deploy.yml
+++ b/.github/workflows/all-deploy.yml
@@ -130,7 +130,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ vars.DOCKER_HUB_USER }}
+          username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.NPM_TOKEN }}
 
       - id: package-json
@@ -201,7 +201,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ vars.DOCKER_HUB_USER }}
+          username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.NPM_TOKEN }}
 
       - id: package-json
@@ -272,7 +272,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ vars.DOCKER_HUB_USER }}
+          username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.NPM_TOKEN }}
 
       - id: package-json
